--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </div>
                 <div class="text " id="12" style="display: none;">
                     <h4>Tabs with soft transitioning effect.</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                    <p>Lorem ipsu dolor sit amet, consectetur adipiscing elit. Aenean euismod
                         bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
                         justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
                         penatibus et magnis dis parturient montes.
