--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                 </div>
                 <div class="image">
-                    <img src="img/image_right_u255.png" alt="">
+                    <img src="./img/image_right_u255.png" alt="">
                 </div>
             </div>
         </div>
