--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                 </div>
                 <div class="image">
-                    <img src='./img/image2.png' alt="">
+                    <img src='img/image2.png' alt="">
                 </div>
             </div>
         </div>
